--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -8,6 +8,8 @@
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon backend.js",
+    "start": "node backend.js"
   },
   "dependencies": {
     "express": "^5.2.1"
